recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:14: error: too many arguments for method leveCrayon: ()Unit
    leveCrayon(steps)
              ^